@@ -6749,26 +6749,68 @@ interface <b>SVGFEBlendElement</b> : <a>SVGElement</a> {
   <dl>
   <dt>SVG_CUSTOM_PARAM_UNKNOWN (unsigned short)</dt>
   <dd>The type is not one of predefined types. It is invalid to attempt to define a new value of this type or to attempt to switch an existing value to this type.</dd>
+  <dt>SVG_CUSTOM_PARAM_NUMBER (unsigned short)</dt>
+  <dd>Corresponds to value 'number'.</dd>
+  <dt>SVG_CUSTOM_PARAM_ARRAY (unsigned short)</dt>
+  <dd>Corresponds to value 'array'.</dd>
+  <dt>SVG_CUSTOM_PARAM_VEC2 (unsigned short)</dt>
+  <dd>Corresponds to value 'vec2'.</dd>
+  <dt>SVG_CUSTOM_PARAM_VEC3 (unsigned short)</dt>
+  <dd>Corresponds to value 'vec3'.</dd>
+  <dt>SVG_CUSTOM_PARAM_VEC4 (unsigned short)</dt>
+  <dd>Corresponds to value 'vec4'.</dd>
+  <dt>SVG_CUSTOM_PARAM_MAT2 (unsigned short)</dt>
+  <dd>Corresponds to value 'mat2'.</dd>
+  <dt>SVG_CUSTOM_PARAM_MAT3 (unsigned short)</dt>
+  <dd>Corresponds to value 'mat3'.</dd>
+  <dt>SVG_CUSTOM_PARAM_MAT4 (unsigned short)</dt>
+  <dd>Corresponds to value 'mat4'.</dd>
+  <dt>SVG_CUSTOM_PARAM_COLOR (unsigned short)</dt>
+  <dd>Corresponds to value 'color'.</dd>
+  <dt>SVG_CUSTOM_PARAM_TEXTURE (unsigned short)</dt>
+  <dd>Corresponds to value 'texture'.</dd>
+  <dt>SVG_CUSTOM_PARAM_TRANSFOMR (unsigned short)</dt>
+  <dd>Corresponds to value 'transform'.</dd>
   </dl>
 </dd>
-
-<p class=issue>Incomplete</p>
-
 
 <dt>Attributes:</dt>
 <dd>
 <dl class="attributes">
-<dt id="SVGFECustomElement__in"><b>in</b><span class="idl-type-parenthetical"> (readonly <a>SVGAnimatedString</a>)</span></dt>
+<dt id="SVGFECustomParamElement__type"><b>type</b><span class="idl-type-parenthetical"> (readonly <a>SVGAnimatedEnumeration</a>)</span></dt>
 <dd>
 <div>
-  Corresponds to attribute <a>'filter primitive/in'</a> on the given <a>'feCustom element'</a> element.
+  Corresponds to attribute <a>'feCustomParam/type'</a> on the given <a>'feCustomParam element'</a> element.
 </div>
 </dd>
-
-<dt id="SVGFECustomElement__geometry"><b>geometry</b><span class="idl-type-parenthetical"> (readonly <a>SVGAnimatedString</a>)</span></dt>
+<dt id="SVGFECustomParamElement__ident"><b>ident</b><span class="idl-type-parenthetical"> (readonly <a>SVGAnimatedString</a>)</span></dt>
 <dd>
 <div>
-  Corresponds to attribute <a>'feCustom/geometry'</a> on the given <a>'feCustom element'</a> element.
+  Corresponds to attribute <a>'feCustomParam/ident'</a> on the given <a>'feCustomParam element'</a> element.
+</div>
+</dd>
+<dt id="SVGFECustomParamElement__values"><b>values</b><span class="idl-type-parenthetical"> (readonly <a>SVGAnimatedNumberList</a>)</span></dt>
+<dd>
+<div>
+  Corresponds to attribute <a>'feCustomParam/values'</a> on the given <a>'feCustomParam element'</a> element.
+</div>
+</dd>
+<dt id="SVGFECustomParamElement__texture"><b>texture</b><span class="idl-type-parenthetical"> (readonly <a>SVGAnimatedString</a>)</span></dt>
+<dd>
+<div>
+  Corresponds to attribute <a>'feCustomParam/texture'</a> on the given <a>'feCustomParam element'</a> element.
+</div>
+</dd>
+<dt id="SVGFECustomParamElement__color"><b>color</b><span class="idl-type-parenthetical"> (readonly <a>SVGAnimatedColor</a>)</span></dt>
+<dd>
+<div>
+  Corresponds to attribute <a>'feCustomParam/color'</a> on the given <a>'feCustomParam element'</a> element.
+</div>
+</dd>
+<dt id="SVGFECustomParamElement__transform"><b>transform</b><span class="idl-type-parenthetical"> (readonly <a>SVGAnimatedTransformList</a>)</span></dt>
+<dd>
+<div>
+  Corresponds to attribute <a>'feCustomParam/transform'</a> on the given <a>'feCustomParam element'</a> element.
 </div>
 </dd>
 </dl>
@@ -7158,7 +7200,7 @@ interface <b>SVGFEBlendElement</b> : <a>SVGElement</a> {
 </div>
 </dd>
 
-<dt id="SVGFEDropShadowElement__stdDeviationX"><b>stdDeviationY</b><span class="idl-type-parenthetical"> (readonly <a>SVGAnimatedNumber</a>)</span></dt>
+<dt id="SVGFEDropShadowElement__stdDeviationY"><b>stdDeviationY</b><span class="idl-type-parenthetical"> (readonly <a>SVGAnimatedNumber</a>)</span></dt>
 <dd>
 <div>
   Corresponds to attribute <a>'feDropShadow/stdDeviation'</a> on the given <a>'feDropShadow element'</a> element.
