@@ -14041,37 +14041,122 @@ interface <b>SVGFEBlendElement</b> : <a
          <dd>The type is not one of predefined types. It is invalid to
           attempt to define a new value of this type or to attempt to switch
           an existing value to this type.
+
+         <dt>SVG_CUSTOM_PARAM_NUMBER (unsigned short)
+
+         <dd>Corresponds to value ‘<code class=property>number</code>’.
+
+         <dt>SVG_CUSTOM_PARAM_ARRAY (unsigned short)
+
+         <dd>Corresponds to value ‘<code class=property>array</code>’.
+
+         <dt>SVG_CUSTOM_PARAM_VEC2 (unsigned short)
+
+         <dd>Corresponds to value ‘<code class=css>vec2</code>’.
+
+         <dt>SVG_CUSTOM_PARAM_VEC3 (unsigned short)
+
+         <dd>Corresponds to value ‘<code class=css>vec3</code>’.
+
+         <dt>SVG_CUSTOM_PARAM_VEC4 (unsigned short)
+
+         <dd>Corresponds to value ‘<code class=css>vec4</code>’.
+
+         <dt>SVG_CUSTOM_PARAM_MAT2 (unsigned short)
+
+         <dd>Corresponds to value ‘<code class=css>mat2</code>’.
+
+         <dt>SVG_CUSTOM_PARAM_MAT3 (unsigned short)
+
+         <dd>Corresponds to value ‘<code class=css>mat3</code>’.
+
+         <dt>SVG_CUSTOM_PARAM_MAT4 (unsigned short)
+
+         <dd>Corresponds to value ‘<code class=css>mat4</code>’.
+
+         <dt>SVG_CUSTOM_PARAM_COLOR (unsigned short)
+
+         <dd>Corresponds to value ‘<code class=property>color</code>’.
+
+         <dt>SVG_CUSTOM_PARAM_TEXTURE (unsigned short)
+
+         <dd>Corresponds to value ‘<code class=property>texture</code>’.
+
+         <dt>SVG_CUSTOM_PARAM_TRANSFOMR (unsigned short)
+
+         <dd>Corresponds to value ‘<code
+          class=property>transform</code>’.
         </dl>
-      </dl>
 
-      <p class=issue>Incomplete
-
-      <dl>
        <dt>Attributes:
 
        <dd>
         <dl class=attributes>
-         <dt id="SVGFECustomElement__in"><b>in</b><span
+         <dt id="SVGFECustomParamElement__type"><b>type</b><span
           class=idl-type-parenthetical> (readonly <a
-          href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedString">SVGAnimatedString</a>)</span>
+          href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a>)</span>
 
          <dd>
-          <div> Corresponds to attribute <span class=xxx>‘<code
-           class=css>filter primitive/in</code>’</span> on the given <a
-           class=element-name href="#feCustomElement">‘<code
-           class=property>feCustom</code>’</a> element.</div>
+          <div> Corresponds to attribute <a class=attr-name
+           href="#feCustomParamTypeAttribute">‘<code
+           class=property>type</code>’</a> on the given <a
+           class=element-name href="#feCustomParamElement">‘<code
+           class=property>feCustomParam</code>’</a> element.</div>
 
-         <dt id="SVGFECustomElement__geometry"><a
-          href="#geometry"><b>geometry</b></a><span
+         <dt id="SVGFECustomParamElement__ident"><b>ident</b><span
           class=idl-type-parenthetical> (readonly <a
           href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedString">SVGAnimatedString</a>)</span>
 
          <dd>
           <div> Corresponds to attribute <a class=attr-name
-           href="#feCustomGeometryAttribute">‘<code
-           class=property>geometry</code>’</a> on the given <a
-           class=element-name href="#feCustomElement">‘<code
-           class=property>feCustom</code>’</a> element.</div>
+           href="#feCustomParamIdentAttribute">‘<code
+           class=property>ident</code>’</a> on the given <a
+           class=element-name href="#feCustomParamElement">‘<code
+           class=property>feCustomParam</code>’</a> element.</div>
+
+         <dt id="SVGFECustomParamElement__values"><b>values</b><span
+          class=idl-type-parenthetical> (readonly <a
+          href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedNumberList">SVGAnimatedNumberList</a>)</span>
+
+         <dd>
+          <div> Corresponds to attribute <a class=attr-name
+           href="#feCustomParamValuesAttribute">‘<code
+           class=property>values</code>’</a> on the given <a
+           class=element-name href="#feCustomParamElement">‘<code
+           class=property>feCustomParam</code>’</a> element.</div>
+
+         <dt id="SVGFECustomParamElement__texture"><b>texture</b><span
+          class=idl-type-parenthetical> (readonly <a
+          href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedString">SVGAnimatedString</a>)</span>
+
+         <dd>
+          <div> Corresponds to attribute <a class=attr-name
+           href="#feCustomParamTextureAttribute">‘<code
+           class=property>texture</code>’</a> on the given <a
+           class=element-name href="#feCustomParamElement">‘<code
+           class=property>feCustomParam</code>’</a> element.</div>
+
+         <dt id="SVGFECustomParamElement__color"><b>color</b><span
+          class=idl-type-parenthetical> (readonly <span
+          class=xxx>SVGAnimatedColor</span>)</span>
+
+         <dd>
+          <div> Corresponds to attribute <a class=attr-name
+           href="#feCustomParamColorAttribute">‘<code
+           class=property>color</code>’</a> on the given <a
+           class=element-name href="#feCustomParamElement">‘<code
+           class=property>feCustomParam</code>’</a> element.</div>
+
+         <dt id="SVGFECustomParamElement__transform"><b>transform</b><span
+          class=idl-type-parenthetical> (readonly <a
+          href="http://www.w3.org/TR/2011/REC-SVG11-20110816/coords.html#InterfaceSVGAnimatedTransformList">SVGAnimatedTransformList</a>)</span>
+
+         <dd>
+          <div> Corresponds to attribute <a class=attr-name
+           href="#feCustomParamTransformAttribute">‘<code
+           class=property>transform</code>’</a> on the given <a
+           class=element-name href="#feCustomParamElement">‘<code
+           class=property>feCustomParam</code>’</a> element.</div>
         </dl>
       </dl>
 
@@ -14658,7 +14743,7 @@ interface <b>SVGFEBlendElement</b> : <a
            class=property>stdDeviation</code>’</a>.</div>
 
          <dt
-          id="SVGFEDropShadowElement__stdDeviationX"><b>stdDeviationY</b><span
+          id="SVGFEDropShadowElement__stdDeviationY"><b>stdDeviationY</b><span
           class=idl-type-parenthetical> (readonly <a
           href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedNumber">SVGAnimatedNumber</a>)</span>
 
