@@ -2,6 +2,9 @@ Changes for Filter Effects specification
 ----------------------------------------
 
 2013-02-27  Dirk Schulze  <dschulze@adobe.com>
+- Added interface for feCustomParam element.
+
+2013-02-27  Dirk Schulze  <dschulze@adobe.com>
 - Style clean up. Bug fixes.
 
 2013-02-27  Dirk Schulze  <dschulze@adobe.com>
